# ddd-onion-hexagonal-python-starter-template

./: .env.example  .gitignore  .importlinter  AI.md  CLAUDE.md  CODEX.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/agents/: implementer.md  implementer.yaml  planner.md  planner.yaml  reviewer.md  reviewer.yaml
.claude/rules/: application-rules.md  domain-rules.md  infra-rules.md
.claude/skills/add-context/: SKILL.md
.claude/skills/add-entity/: SKILL.md
.claude/skills/fix-issue/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/: main.py
src/integration_management/application/: event_handlers.py  queries.py  read_models.py  use_cases.py
src/integration_management/domain/: entities.py  exceptions.py  ports.py  value_objects.py
src/integration_management/infrastructure/: api.py  orm.py  query_adapters.py  repositories.py  unit_of_work.py
src/shared/application/: event_bus.py  unit_of_work.py
src/shared/domain/: events.py
src/shared/infrastructure/: app.py  database.py  event_bus.py
src/work_management/application/: queries.py  read_models.py  use_cases.py
src/work_management/domain/: entities.py  events.py  exceptions.py  ports.py  value_objects.py
src/work_management/infrastructure/: api.py  orm.py  query_adapters.py  repositories.py  unit_of_work.py
tests/: conftest.py  test_event_flow.py  test_events.py
tests/architecture/: test_architecture.py
tests/integration_management/: test_api.py  test_domain.py  test_event_handlers.py  test_queries.py  test_use_cases.py
tests/work_management/: test_api.py  test_domain.py  test_events.py  test_queries.py  test_use_cases.py
