[project]
name = "ddd-onion-hexagonal-starter-template"
version = "0.1.0"
description = "Python DDD/Onion/Hexagonal Architecture starter template optimized for AI agent maintenance"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "pydantic>=2.0,<3.0",
    "sqlalchemy>=2.0,<3.0",
    "uvicorn>=0.30",
]

[dependency-groups]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
    "pytest-archon>=0.0.6",
    "import-linter>=2.0",
    "deptry>=0.22",
    "ruff>=0.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/work_management",
    "src/integration_management",
    "src/shared",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.deptry]
known_first_party = ["work_management", "integration_management", "shared"]
per_rule_ignores = {"DEP002" = ["uvicorn"]}
